# piestream

./: .dockerignore  .gitignore  .licenserc.yaml  CONTRIBUTING.md  Cargo.toml  Makefile.toml  README.md  a.txt  clippy.toml  error.txt  index.html  risedev-components.user.env  risedev.yml
src/bench/: Cargo.toml
src/bench/file_cache_bench/: analyze.rs  bench.rs  bpf.rs  main.rs  rate.rs  utils.rs
src/bench/s3_bench/: main.rs
src/bench/ss_bench/: README.md  main.rs
src/bench/ss_bench/operations/: get.rs  mod.rs  prefix_scan_random.rs  write_batch.rs
src/bench/ss_bench/utils/: display_stats.rs  latency_stat.rs  mod.rs  my_stats.rs  workload.rs
src/cmd_all/: Cargo.toml
src/cmd_all/src/: lib.rs  playground.rs
src/common/common_service/: Cargo.toml
src/common/common_service/src/: lib.rs  metrics_manager.rs  observer_manager.rs
src/compresssion/: Cargo.toml
src/compresssion/examples/: compression-native.rs  piecompression.rs
src/compresssion/src/: basic.rs  compression.rs  compressor.rs  compressor_config.rs  decompressor.rs  decompressor_config.rs  errors.rs  format.rs  lib.rs  metadata.rs  mod.rs  piecompression.rs
src/compresssion/tests/: compression-native.rs  piecompression.rs
src/ctl/: Cargo.toml
src/ctl/src/: cmd_impl.rs  common.rs  lib.rs
src/ctl/src/cmd_impl/: bench.rs  hummock.rs  meta.rs  profile.rs  table.rs  trace.rs
src/ctl/src/cmd_impl/hummock/: compaction_group.rs  disable_commit_epoch.rs  list_kv.rs  list_version.rs  list_version_deltas.rs  sst_dump.rs  trigger_full_gc.rs  trigger_manual_compaction.rs
src/ctl/src/cmd_impl/meta/: cluster_info.rs  pause_resume.rs  reschedule.rs
src/ctl/src/cmd_impl/table/: list.rs  scan.rs
src/ctl/src/common/: hummock_service.rs  meta_service.rs
src/frontend/: Cargo.toml
src/frontend/planner_test/: Cargo.toml  planner_test.toml
src/frontend/planner_test/src/: lib.rs  resolve_id.rs
src/frontend/planner_test/tests/: planner_test_runner.rs
src/frontend/planner_test/tests/testdata/: agg.yaml  basic_query.yaml  dynamic_filter.yaml  expr.yaml  join.yaml  limit.yaml  nexmark.yaml  over_window_function.yaml  struct_query.yaml  subquery_expr_correlated.yaml  sysinfo_funcs.yaml  types.yaml
src/frontend/src/: lib.rs  meta_client.rs  mysql_session.rs  session.rs  test_utils.rs
src/frontend/src/binder/: bind_context.rs  delete.rs  insert.rs  mod.rs  query.rs  select.rs  set_expr.rs  statement.rs  struct_field.rs  update.rs  values.rs
src/frontend/src/binder/expr/: binary_op.rs  column.rs  function.rs  mod.rs  order_by.rs  subquery.rs  value.rs
src/frontend/src/binder/relation/: join.rs  mod.rs  subquery.rs  table_function.rs  table_or_source.rs  window_table_function.rs
src/frontend/src/catalog/: catalog_service.rs  column_catalog.rs  database_catalog.rs  index_catalog.rs  mod.rs  root_catalog.rs  schema_catalog.rs  sink_catalog.rs  source_catalog.rs  system_catalog.rs  table_catalog.rs
src/frontend/src/catalog/pg_catalog/: mod.rs  pg_cast.rs  pg_class.rs  pg_index.rs  pg_matviews_info.rs  pg_namespace.rs  pg_type.rs  pg_user.rs
src/frontend/src/expr/: agg_call.rs  correlated_input_ref.rs  expr_mutator.rs  expr_rewriter.rs  expr_visitor.rs  function_call.rs  input_ref.rs  literal.rs  mod.rs  order_by_expr.rs  subquery.rs  table_function.rs  utils.rs  window_function.rs
src/frontend/src/expr/type_inference/: agg.rs  cast.rs  func.rs  mod.rs
src/frontend/src/handler/: alter_user.rs  create_database.rs  create_index.rs  create_mv.rs  create_schema.rs  create_sink.rs  create_source.rs  create_table.rs  create_user.rs  describe.rs  dml.rs  drop_database.rs  drop_index.rs  drop_mv.rs  drop_schema.rs  drop_sink.rs  drop_source.rs  drop_table.rs  drop_user.rs  explain.rs  flush.rs  handle_privilege.rs  mod.rs  privilege.rs  query.rs  set.rs  show.rs  util.rs  variable.rs
src/frontend/src/monitor/: mod.rs  stats.rs
src/frontend/src/observer/: mod.rs  observer_manager.rs
src/frontend/src/optimizer/: delta_join_solver.rs  heuristic.rs  max_one_row_visitor.rs  mod.rs  plan_correlated_id_finder.rs  plan_rewriter.rs  plan_visitor.rs
src/frontend/src/optimizer/plan_node/: batch_delete.rs  batch_exchange.rs  batch_expand.rs  batch_filter.rs  batch_group_topn.rs  batch_hash_agg.rs  batch_hash_join.rs  batch_hop_window.rs  batch_insert.rs  batch_limit.rs  batch_lookup_join.rs  batch_nested_loop_join.rs  batch_project.rs  batch_project_set.rs  batch_seq_scan.rs  batch_simple_agg.rs  batch_sort.rs  batch_sort_agg.rs  batch_topn.rs  (+53 more)
src/frontend/src/planner/: delete.rs  insert.rs  mod.rs  query.rs  relation.rs  select.rs  set_expr.rs  statement.rs  update.rs  values.rs
src/frontend/src/scheduler/: error.rs  hummock_snapshot_manager.rs  local.rs  mod.rs  plan_fragmenter.rs  task_context.rs  worker_node_manager.rs
src/frontend/src/stream_fragmenter/: mod.rs
src/frontend/src/user/: mod.rs  user_authentication.rs  user_manager.rs  user_privilege.rs  user_service.rs
src/frontend/src/utils/: column_index_mapping.rs  condition.rs  connected_components.rs  mod.rs  scan_range.rs  stream_graph_formatter.rs  with_options.rs
src/frontend/test_runner/: Cargo.toml  planner_test.toml
src/frontend/test_runner/src/: lib.rs  resolve_id.rs
src/frontend/test_runner/tests/: plan_test_runner.rs
src/storage/compactor/: Cargo.toml
src/storage/compactor/src/: lib.rs  rpc.rs  server.rs
src/storage/hummock_test/: Cargo.toml
src/storage/hummock_test/src/: compactor_tests.rs  failpoint_tests.rs  hummock_read_version_tests.rs  hummock_storage_tests.rs  lib.rs  local_version_manager_tests.rs  snapshot_tests.rs  state_store_tests.rs  test_utils.rs  vacuum_tests.rs
src/storage/hummock_test/sync_point_unit_test/: Cargo.toml
src/tests/simulation/: Cargo.toml
src/tests/simulation/src/: main.rs
src/tests/simulation_scale/: Cargo.toml
src/tests/simulation_scale/src/: cluster.rs  ctl_ext.rs  lib.rs  nexmark_ext.rs  utils.rs
src/tests/simulation_scale/tests/: hello.rs  nexmark_q4.rs
src/tests/sync_point/: Cargo.toml  run_sync_point_test.sh
src/tests/sync_point/src/: lib.rs  test_utils.rs  tests.rs
(+1207 files in other folders)
