[package]
name = "piestream_bench"
version = "0.1.10"
edition = "2021"

[dependencies]
bytes = "1"
bytesize = { version = "1", features = ["serde"] }
clap = { version = "3", features = ["derive"] }
env_logger = "0.9"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
itertools = "0.10"
log = "0.4"
madsim = "=0.2.0-alpha.3"
moka = { version = "0.8", features = ["future"] }
prometheus = { version = "0.13", features = ["process"] }
rand = "0.8"
piestream_common = { path = "../common" }
piestream_hummock_sdk = { path = "../storage/hummock_sdk" }
piestream_meta = { path = "../meta", features = ["test"] }
piestream_pb = { path = "../prost" }
piestream_rpc_client = { path = "../rpc_client" }
piestream_storage = { path = "../storage" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "=0.2.0-alpha.3", package = "madsim-tokio", features = [
    "fs",
    "rt",
    "rt-multi-thread",
    "sync",
    "macros",
    "time",
    "signal",
] }
toml = "0.5"
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[[bin]]
name = "ss-bench"
path = "ss_bench/main.rs"
