[package]
name = "piestream_cmd_all"
version = "0.1.10"
edition = "2021"

[features]
static-link = ["workspace-static-link"]

[dependencies]
anyhow = "1"
clap = { version = "3", features = ["derive"] }
log = { version = "0.4", features = ["release_max_level_info"] }
madsim = "=0.2.0-alpha.3"
risedev = { path = "../risedevtool" }
piestream_compactor = { path = "../storage/compactor" }
piestream_compute = { path = "../compute" }
piestream_ctl = { path = "../ctl" }
piestream_frontend = { path = "../frontend" }
piestream_meta = { path = "../meta" }
piestream_rt = { path = "../utils/runtime" }
tikv-jemallocator = "0.5"
tokio = { version = "=0.2.0-alpha.3", package = "madsim-tokio", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "macros",
    "time",
    "signal",
    "fs",
] }
tracing = { version = "0.1", features = ["release_max_level_info"] }
workspace-hack = { version = "0.1", path = "../workspace-hack" }
workspace-static-link = { path = "../utils/static-link", optional = true, features = ["enabled"] }

[[bin]]
name = "piestream"
path = "src/bin/piestream.rs"
