[package]
name = "piestream_compression"
version = "0.0.1"
license = "Apache-2.0"
edition = "2021"

[features]
default = ["snap", "brotli", "flate2", "lz4", "zstd", "q_compress"]

[dependencies]
# arrow = { git = "https://github.com/ustc-cds-hxie/arrow-rs.git", branch = "u8_general_api", version = "32.0.0"}
piestream_common = { path = "../common" }

snap = { version = "1.0", default-features = false, optional = true }
brotli = { version = "3.3", default-features = false, features = ["std"], optional = true }
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"], optional = true }
lz4 = { version = "1.23", default-features = false, optional = true }
zstd = { version = "0.12.0", optional = true, default-features = false }

# compression extension
byteorder = { version = "1" }
q_compress = { version = "0.11.4", default_features = false, optional = true }

rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }

log = { version = "0.4.17" }
env_logger = { version = "0.10.0" }

[target.'cfg(not(madsim))'.dependencies]
workspace-hack = { version = "0.1.13", path = "../workspace-hack" }