[package]
name = "piestream_ctl"
version = "0.1.13"
edition = "2021"

[dependencies]
anyhow = "1"
bytes = "1"
chrono = "0.4"
clap = { version = "3", features = ["derive"] }
comfy-table = "6"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
parking_lot = "0.12"
regex = "1.6.0"
piestream_common = { path = "../common" }
piestream_common_service = { path = "../common/common_service" }
piestream_frontend = { path = "../frontend" }
piestream_hummock_sdk = { path = "../storage/hummock_sdk" }
piestream_object_store = { path = "../object_store" }
piestream_pb = { path = "../prost" }
piestream_rpc_client = { path = "../rpc_client" }
piestream_storage = { path = "../storage" }
size = "0.2"
tokio = { version = "0.2", package = "madsim-tokio", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "macros",
    "time",
    "signal",
    "fs",
] }
tracing = "0.1"

[target.'cfg(not(madsim))'.dependencies]
workspace-hack = { version = "0.1.13", path = "../workspace-hack" }
