[package]
name = "piestream_frontend"
version = "0.1.13"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
arc-swap = "1"
assert-impl = "0.1"
async-trait = "0.1"
byteorder = "1.4"
bytes = "1"
clap = { version = "3", features = ["derive"] }
derivative = "2"
downcast-rs = "1.2"
dyn-clone = "1.0.4"
enum-as-inner = "0.5"
fixedbitset = "0.4.1"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
futures-async-stream = "0.2"
itertools = "0.10"
maplit = "1"
md5 = "0.7.0"
num-integer = "0.1"
num-traits = "0.2"
parking_lot = "0.12"
parse-display = "0.6"
paste = "1"
pgwire = { path = "../utils/pgwire" }
pin-project-lite = "0.2"
prometheus = { version = "0.13", features = ["process"] }
prost = "0.11"
rand = "0.8"
piestream_batch = { path = "../batch" }
piestream_common = { path = "../common" }
piestream_common_service = { path = "../common/common_service" }
piestream_expr = { path = "../expr" }
piestream_pb = { path = "../prost" }
piestream_rpc_client = { path = "../rpc_client" }
piestream_source = { path = "../source" }
piestream_sqlparser = { path = "../sqlparser" }
piestream_storage = { path = "../storage" }
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
msql-srv = { git = "https://github.com/wangdexinhp/msql-srv", rev = "ee14d86" }
serde_json = "1"
sha2 = "0.10.2"
smallvec = { version = "1.6.1", features = ["serde"] }
tempfile = "3"
thiserror = "1"
tokio = { version = "0.2", package = "madsim-tokio", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "macros",
    "time",
    "signal",
    "fs",
] }
tonic = { version = "0.2", package = "madsim-tonic" }
tracing = "0.1"
uuid = "1"

[target.'cfg(not(madsim))'.dependencies]
workspace-hack = { version = "0.1.13", path = "../workspace-hack" }

[dev-dependencies]
assert_matches = "1"
tempfile = "3"
