[package]
name = "piestream_common_service"
version = "0.2.0-alpha"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
hyper = "0.14"
prometheus = { version = "0.13" }
piestream_common = { path = "../" }
piestream_pb = { path = "../../prost" }
piestream_rpc_client = { path = "../../rpc_client" }
tokio = { version = "0.2", package = "madsim-tokio", features = ["rt", "rt-multi-thread", "sync", "macros", "time", "signal"] }
tonic = { version = "0.2", package = "madsim-tonic" }
tower = { version = "0.4", features = ["util", "load-shed"] }
tower-http = { version = "0.3", features = ["add-extension", "cors"] }
tracing = "0.1"

[target.'cfg(not(madsim))'.dependencies]
workspace-hack = { version = "0.2.0-alpha", path = "../../workspace-hack" }
