[package]
name = "piestream_compactor"
version = "0.1.13"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
parking_lot = "0.12"
prometheus = { version = "0.13" }
piestream_common = { path = "../../common" }
piestream_common_service = { path = "../../common/common_service" }
piestream_hummock_sdk = { path = "../hummock_sdk" }
piestream_object_store = { path = "../../object_store" }
piestream_pb = { path = "../../prost" }
piestream_rpc_client = { path = "../../rpc_client" }
piestream_storage = { path = "../../storage" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "0.2", package = "madsim-tokio", features = [
    "fs",
    "rt",
    "rt-multi-thread",
    "sync",
    "macros",
    "time",
    "signal",
] }
tokio-retry = "0.3"
tokio-stream = "0.1"
toml = "0.5"
tonic = { version = "0.2", package = "madsim-tonic" }
tracing = "0.1"

[target.'cfg(not(madsim))'.dependencies]
workspace-hack = { version = "0.1.13", path = "../../workspace-hack" }
