[package]
name = "piestream_hummock_test"
version = "0.2.0-alpha"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
bytes = { version = "1" }
fail = "0.5"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
itertools = "0.10"
parking_lot = "0.12"
rand = "0.8"
piestream_common = { path = "../../common" }
piestream_common_service = { path = "../../common/common_service" }
piestream_compute = { path = "../../compute" }
piestream_hummock_sdk = { path = "../hummock_sdk" }
piestream_meta = { path = "../../meta", features = ["test"] }
piestream_object_store = { path = "../../object_store" }
piestream_pb = { path = "../../prost" }
piestream_rpc_client = { path = "../../rpc_client" }
piestream_storage = { path = "..", features = ["test"] }
tokio = { version = "0.2", package = "madsim-tokio" }

[target.'cfg(not(madsim))'.dependencies]
workspace-hack = { version = "0.2.0-alpha", path = "../../workspace-hack" }

[dev-dependencies]
futures = { version = "0.3", default-features = false, features = ["alloc", "executor"] }

[features]
failpoints = ["piestream_storage/failpoints"]
