[package]
name = "piestream_simulation"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
clap = "3"
etcd-client = { version = "0.2.8", package = "madsim-etcd-client" }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
glob = "0.3"
madsim = "0.2.7"
rand = "0.8"
rdkafka = { package = "madsim-rdkafka", version = "=0.2.8-alpha", features = ["cmake-build"] }
piestream_compactor = { path = "../../storage/compactor" }
piestream_compute = { path = "../../compute" }
piestream_frontend = { path = "../../frontend" }
piestream_meta = { path = "../../meta" }
piestream_sqlsmith = { path = "../sqlsmith" }
sqllogictest = "0.6.4"
tempfile = "3"
tokio = { version = "0.2", package = "madsim-tokio" }
tokio-postgres = "0.7.7"
tracing = "0.1"

[target.'cfg(not(madsim))'.dependencies]
workspace-hack = { version = "0.1.13", path = "../../workspace-hack" }
